# WP10_Cluster2_NACEClassification_PL

./: .nojekyll  README.md  _quarto.yml  index.html  index.qmd  metadata.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.quarto/idx/: index.qmd.json
.quarto/idx/chapters/: chapter1.qmd.json
.quarto/idx/notebooks/: notebook1.qmd.json
.quarto/project-cache/: deno-kv-file
.quarto/xref/: 538dc14c  INDEX  e616f1f2  f24f5eed
RAG/: index.py  rag.ipynb
RAG/DataBase/: rag_database.py
RAG/DataBase/chroma_pkd_pl/: chroma.sqlite3
RAG/Helper_CSV/: prepare_csv.py
RAG/Source/: pkd.csv
Scraping/: output.csv  scrap.ipynb  scrap.py  source.csv
Scraping/CSV_Helper/: csv_helper.py
Scraping/Scrrapper/: scrapp_helper.py
Scraping/URL_Helper/: url_helper.py
Summary/: config.py  summary.ipynb
Summary/input/: input.csv
Summary/output/: WP-10_gotowe.csv
_site/: index.html  search.json  sitemap.xml
_site/chapters/: chapter1.html
_site/notebooks/: ModelApproach.html  ModelApproach.ipynb  Results.html  Results.ipynb  currentResearch.html  currentResearch.ipynb  dataSource.html  dataSource.ipynb  notebook1.ipynb
_site/site_libs/bootstrap/: bootstrap-dark-4e5a466cdf525417d58f2f5a844c7f6d.min.css
chapters/: chapter1.qmd  metadata.json
notebooks/: ModelApproach.html  ModelApproach.ipynb  ModelApproach.qmd  Results.html  Results.ipynb  Results.qmd  currentResearch.html  currentResearch.ipynb  currentResearch.qmd  dataSource.html  dataSource.ipynb  dataSource.qmd  metadata.json  notebook1.qmd
(+2 files in other folders)
